[gd_scene load_steps=4 format=3 uid="uid://blaquotpbrxd"]

[ext_resource type="Script" path="res://textbox/text_box.gd" id="1_o44p5"]
[ext_resource type="Texture2D" uid="uid://b6hvpk4842m5f" path="res://textbox/textBox.png" id="2_uiidj"]
[ext_resource type="FontFile" uid="uid://c2yfkpdg5iae5" path="res://textbox/ComicNeue-Regular.ttf" id="3_hcn2a"]

[node name="TextBox" type="MarginContainer"]
offset_right = 546.0
offset_bottom = 450.0
script = ExtResource("1_o44p5")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_uiidj")
region_rect = Rect2(-2.41492, 3.37995, 908.302, 906.737)
patch_margin_left = 128
patch_margin_top = 138
patch_margin_right = 175
patch_margin_bottom = 163

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 40

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_hcn2a")
theme_override_font_sizes/font_size = 180
vertical_alignment = 2

[node name="LetterDisplayTimer" type="Timer" parent="MarginContainer"]
one_shot = true

[node name="HideTimer" type="Timer" parent="MarginContainer"]
one_shot = true

[connection signal="timeout" from="MarginContainer/LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
[connection signal="timeout" from="MarginContainer/HideTimer" to="." method="_on_hide_timer_timeout"]
